--- a/pom.xml
+++ b/pom.xml
@@ -15,22 +15,198 @@
   </parent>
   
   <properties>
-    <hibernate.version>4.1.1.Final</hibernate.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<wro4j.version>1.7.6</wro4j.version>
+		
+    <!-- Framework dependency versions -->
+    <displaytag.version>1.2</displaytag.version>
+    
+    <!-- Persistence -->
+    <hibernate.ogm.version>4.2.0.Final</hibernate.ogm.version>
+    <hibernate.version>5.0.2.Final</hibernate.version>
+    <hibernate-validator.version>5.2.2.Final</hibernate-validator.version>
+    <hibernate.entitymanager.version>5.0.2.Final</hibernate.entitymanager.version>
+    <ehcache.version>2.3.1</ehcache.version>
+    <ehcache.web.version>2.0.3</ehcache.web.version>
+    <jpa.version>2.0-cr-1</jpa.version>
+    <guava.version>19.0-rc2</guava.version>
+    <cglib.version>3.1</cglib.version>
+    <javassist.version>3.20.0-GA</javassist.version>
+    
+    <!-- Testing dependency versions -->
+    <junit.version>4.11</junit.version>
+    <powermock.version>1.6.3</powermock.version>
+    <gsbase.version>2.0.1</gsbase.version>
+    
+    <!-- webapp versions -->
+    <jsp.version>2.1</jsp.version>
+    <jstl.version>1.1.2</jstl.version>
+    <displaytag.version>1.2</displaytag.version>
+    
+    <!-- Database settings -->
+    <dbunit.operation.type>CLEAN_INSERT</dbunit.operation.type>
+    
+    <!-- commons -->
+    <commons.lang.version>2.6</commons.lang.version>
+    <commons.beanutils.version>1.9.2</commons.beanutils.version>
+    <commons.dbcp.version>1.4</commons.dbcp.version>
+    <commons.fileupload.version>1.3.1</commons.fileupload.version>
   </properties>
+
+  <build>
+    <finalName>beercraft</finalName>
+  
+    <resources>
+      <resource>
+        <directory>${project.basedir}/src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+      <resource>
+        <directory>${project.build.directory}/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+      <resource>
+        <directory>${project.build.directory}/generated-resources</directory>
+      </resource>
+    </resources>
+    
+    <testResources>
+      <testResource>
+        <directory>${project.basedir}/src/test/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
+      <testResource>
+        <directory>${project.basedir}/src/main/webapp</directory>
+        <filtering>true</filtering>
+        <includes>
+          <include>**/*.xml</include>
+        </includes>
+      </testResource>
+    </testResources>
+    
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+      <!--<plugin>-->
+      <!--  <artifactId>maven-resources-plugin</artifactId>-->
+      <!--  <executions>-->
+      <!--    <execution>-->
+            <!-- Serves *only* to filter the wro.xml so it can get an absolute path for the project -->
+      <!--      <id>copy-resources</id>-->
+      <!--      <phase>validate</phase>-->
+      <!--      <goals>-->
+      <!--        <goal>copy-resources</goal>-->
+      <!--      </goals>-->
+      <!--      <configuration>-->
+      <!--        <outputDirectory>${project.basedir}/target/wro</outputDirectory>-->
+      <!--        <resources>-->
+      <!--          <resource>-->
+      <!--            <directory>${project.basedir}/src/main/wro</directory>-->
+      <!--            <filtering>true</filtering>-->
+      <!--          </resource>-->
+      <!--        </resources>-->
+      <!--      </configuration>-->
+      <!--    </execution>-->
+      <!--  </executions>-->
+      <!--</plugin>-->
+      <!--<plugin>-->
+      <!--  <groupId>ro.isdc.wro4j</groupId>-->
+      <!--  <artifactId>wro4j-maven-plugin</artifactId>-->
+      <!--  <version>${wro4j.version}</version>-->
+      <!--  <executions>-->
+      <!--    <execution>-->
+      <!--      <phase>generate-resources</phase>-->
+      <!--      <goals>-->
+      <!--        <goal>run</goal>-->
+      <!--      </goals>-->
+      <!--    </execution>-->
+      <!--  </executions>-->
+      <!--  <configuration>-->
+      <!--    <wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory</wroManagerFactory>-->
+      <!--    <cssDestinationFolder>${project.build.directory}/generated-resources/static/css</cssDestinationFolder>-->
+      <!--    <jsDestinationFolder>${project.build.directory}/generated-resources/static/js</jsDestinationFolder>-->
+      <!--    <wroFile>${project.build.directory}/wro/wro.xml</wroFile>-->
+      <!--    <extraConfigFile>${basedir}/src/main/wro/wro.properties</extraConfigFile>-->
+      <!--    <contextFolder>${basedir}/src/main/wro</contextFolder>-->
+      <!--  </configuration>-->
+      <!--  <dependencies>-->
+      <!--    <dependency>-->
+      <!--      <groupId>org.webjars</groupId>-->
+      <!--      <artifactId>jquery</artifactId>-->
+      <!--      <version>2.1.1</version>-->
+      <!--    </dependency>-->
+      <!--    <dependency>-->
+      <!--      <groupId>org.webjars</groupId>-->
+      <!--      <artifactId>angularjs</artifactId>-->
+      <!--      <version>1.3.8</version>-->
+      <!--    </dependency>-->
+      <!--    <dependency>-->
+      <!--      <groupId>org.webjars</groupId>-->
+      <!--      <artifactId>bootstrap</artifactId>-->
+      <!--      <version>3.2.0</version>-->
+      <!--    </dependency>-->
+      <!--  </dependencies>-->
+      <!--</plugin>-->
+      <!--<plugin>-->
+      <!--  <groupId>com.github.searls</groupId>-->
+      <!--  <artifactId>jasmine-maven-plugin</artifactId>-->
+      <!--  <version>2.0-alpha-01</version>-->
+      <!--  <executions>-->
+      <!--    <execution>-->
+      <!--      <goals>-->
+      <!--        <goal>test</goal>-->
+      <!--      </goals>-->
+      <!--    </execution>-->
+      <!--  </executions>-->
+      <!--  <configuration>-->
+      <!--    <additionalContexts>-->
+      <!--      <context>-->
+      <!--        <contextRoot>/lib</contextRoot>-->
+      <!--        <directory>${project.build.directory}/generated-resources/static/js</directory>-->
+      <!--      </context>-->
+      <!--    </additionalContexts>-->
+      <!--    <preloadSources>-->
+      <!--      <source>/lib/angular-bootstrap.js</source>-->
+      <!--      <source>/webjars/angularjs/1.3.8/angular-mocks.js</source>-->
+      <!--    </preloadSources>-->
+      <!--    <jsSrcDir>${project.basedir}/src/main/resources/static/js</jsSrcDir>-->
+      <!--    <jsTestSrcDir>${project.basedir}/src/test/resources/static/js</jsTestSrcDir>-->
+      <!--    <webDriverClassName>org.openqa.selenium.phantomjs.PhantomJSDriver</webDriverClassName>-->
+      <!--  </configuration>-->
+      <!--  <dependencies>-->
+      <!--    <dependency>-->
+      <!--      <groupId>org.webjars</groupId>-->
+      <!--      <artifactId>angularjs</artifactId>-->
+      <!--      <version>1.3.8</version>-->
+      <!--    </dependency>-->
+      <!--  </dependencies>-->
+      <!--</plugin>-->
+    </plugins>
+  </build>
   
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.hibernate.ogm</groupId>
         <artifactId>hibernate-ogm-bom</artifactId>
+        <version>${hibernate.ogm.version}</version>
         <type>pom</type>
-        <version>${hibernate.version}</version>
         <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
   
   <dependencies>
+    <!-- Spring Boot -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
@@ -61,22 +237,122 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+    <!-- end Spring Boot -->
+    
+    <!-- persistence -->
+    <dependency>
+      <groupId>org.hibernate.ogm</groupId>
+      <artifactId>hibernate-ogm-mongodb</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.spec.javax.transaction</groupId>
+      <artifactId>jboss-transaction-api_1.2_spec</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.jbossts</groupId>
+      <artifactId>jbossjta</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>${hibernate-validator.version}</version>
+    </dependency>
+    <!-- end persistence -->
+    
+    <!-- commons -->
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>${commons.lang.version}</version>
+    </dependency>
+    <!--<dependency>-->
+    <!--  <groupId>commons-beanutils</groupId>-->
+    <!--  <artifactId>commons-beanutils</artifactId>-->
+    <!--  <version>${commons.beanutils.version}</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+    <!--  <groupId>commons-dbcp</groupId>-->
+    <!--  <artifactId>commons-dbcp</artifactId>-->
+    <!--  <version>${commons.dbcp.version}</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+    <!--  <groupId>commons-fileupload</groupId>-->
+    <!--  <artifactId>commons-fileupload</artifactId>-->
+    <!--  <version>${commons.fileupload.version}</version>-->
+    <!--</dependency>-->
+    <!-- end commons -->
+    
+    <!-- testing -->
+    <!--<dependency>-->
+    <!--  <groupId>junit</groupId>-->
+    <!--  <artifactId>junit</artifactId>-->
+    <!--  <version>${junit.version}</version>-->
+    <!--  <scope>test</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+    <!--  <groupId>junit</groupId>-->
+    <!--  <artifactId>junit-dep</artifactId>-->
+    <!--  <version>${junit.version}</version>-->
+    <!--  <scope>test</scope>-->
+    <!--  <optional>true</optional>-->
+    <!--</dependency>-->
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <!--<dependency>-->
+    <!--  <groupId>javassist</groupId>-->
+    <!--  <artifactId>javassist</artifactId>-->
+    <!--  <version>${javassist.version}</version>-->
+    <!--</dependency>-->
+    <dependency>
+      <groupId>gsbase</groupId>
+      <artifactId>gsbase</artifactId>
+      <version>${gsbase.version}</version>
+    </dependency>
+    <!-- end testing -->
+    
+    <dependency>
+      <groupId>taglibs</groupId>
+      <artifactId>standard</artifactId>
+      <version>${jstl.version}</version>
+    </dependency>
+    <!--<dependency>-->
+    <!--  <groupId>cglib</groupId>-->
+    <!--  <artifactId>cglib</artifactId>-->
+    <!--  <version>${cglib.version}</version>-->
+    <!--  <scope>runtime</scope>-->
+    <!--</dependency>-->
+    <dependency>
+      <groupId>displaytag</groupId>
+      <artifactId>displaytag</artifactId>
+      <version>${displaytag.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>${guava.version}</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>angularjs</artifactId>
+      <version>1.3.8</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>jasmine</artifactId>
+      <version>2.0.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
-
-  <build>
-    <finalName>beercraft</finalName>
-    <plugins>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 </project>
